@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-03T16:19:04Z",
+  "timestamp" : "2022-07-04T01:45:20Z",
   "count_outdated" : 370,
   "uniques_outdated" : 213,
-  "count" : 396,
+  "count" : 397,
   "uniques" : 229,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
