@@ -1,3 +1,10 @@
+2022-07-04T01:45:20Z:
+* notice: last 14d: unq all: 4 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 213 370 / 229 396
+* notice: next accum: outdated-unq outdated-all / unq all: 213 370 / 229 397
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-07-03]
+
 2022-07-03T16:19:04Z:
 * notice: last 14d: unq all: 4 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 212 369 / 229 396
